# embedded-basic

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  Android.bp  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Dockerfile  build-and-test.yml
rlib/: CMakeLists.txt
rlib-tests/: CMakeLists.txt
rlib-tests/bitconverter/: double_tests.cpp  float_tests.cpp  twos_complement_14bits_tests.cpp  twos_complement_24bits_tests.cpp  uint16_tests.cpp  uint32_tests.cpp
rlib-tests/src/: bitconverter_float_tests.cpp  bitconverter_to_be_range_tests.cpp  bitconverter_twos_complement_14bits_tests.cpp  bitconverter_uint32_tests.cpp  crc16_tests.cpp  placement_new_tests.cpp
rlib/bitconverter/: bitconverter.cpp  bitconverter.h  bitconverter.impl.h
rlib/include/rlib/: bitconverter.h  bitconverter.impl.h  crc16.h  placement_new_polymorphic_store.h  placement_new_store.h  placement_new_typed_store.h  placement_new_universal_store.h
rlib/include/rlib/detail/: placement_new_instance_storage.h  placement_new_storage_base.h
rlib/src/: bitconverter.cpp  crc16.cpp  placement_new_instance_storage.cpp  placement_new_polymorphic_store.cpp  placement_new_storage_base.cpp  placement_new_store.cpp  placement_new_typed_store.cpp  placement_new_universal_store.cpp
rlib/tests-bitconverter/: bitconverter_double_tests.cpp  bitconverter_float_tests.cpp  bitconverter_twos_complement_14bits_tests.cpp  bitconverter_twos_complement_24bits_tests.cpp  bitconverter_uint16_tests.cpp  bitconverter_uint32_tests.cpp
